# REngine

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  ProjectBuildProperties.targets  README.md  REngine.sln  WebAssetsBuildProperties.targets  WebBuildProperties.targets  update_dependencies.bat  update_dependencies.sh
Assets/: default-rendergraph.xml  default_execution_pipeline.xml  ponggame-rendergraph.xml  postprocess-rendergraph.xml
REngine.Android.Sandbox/: AndroidManifest.xml  MainActivity.cs  REngine.Android.Sandbox.csproj  SandboxApp.cs
REngine.Asset.Tests/: FontAssetTests.cs  ImageAssetTests.cs  REngine.Asset.Tests.csproj
REngine.Assets/: AudioAsset.cs  AudioImpl.cs  BaseAsset.cs  FontAsset.cs  IAsset.cs  ImageAsset.cs  Module.cs  REngine.Assets.csproj
REngine.Base.Tests/: MockServiceProvider.cs  REngine.Base.Tests.csproj
REngine.Contents/: Module.cs  REngine.Contents.csproj
REngine.Core/: AsyncEngineInstance.cs  DisposableQueue.cs  Engine.cs  EngineApplication.cs  EngineEvents.cs  EngineGlobals.cs  EngineImpl.cs  EngineInstance.cs  EngineInstanceStep.cs  EngineSettings.cs  EventEmitter.cs  IEngine.cs  IHashable.cs  IMergeable.cs  IModule.cs  INativeObject.cs  IWindow.cs  IWindowManager.cs  Module.cs  NativeWindow.cs  Platform.cs  REngine.Core.csproj  Ref.cs  RefCount.cs  libenginecore.js
REngine.Core.Tests/: REngine.Core.Tests.csproj
REngine.Game/: Module.cs  REngine.Game.csproj  SpriteInstanceSystem.cs  SpriteSystem.cs  SpriteSystemEvents.cs  TextSystem.cs
REngine.Gtk.Playground/: Program.cs  REngine.Gtk.Playground.csproj
REngine.Player/: REngine.Player.csproj
REngine.RHI.DiligentDriver/: BufferImpl.cs  CommandBufferImpl.cs  DeviceImpl.cs  DiligentGraphicsDriverImpl.cs  DiligentGraphicsFactory.cs  GraphicsDriverImpl.cs  GraphicsFactory.cs  GraphicsPipelineStateImpl.cs  GraphicsSettings.cs  INativeObject.cs  LookupObjects.cs  Module.cs  PipelineResourceBindingImpl.cs  PipelineStateImpl.cs  REngine.RHI.DiligentDriver.csproj  ShaderImpl.cs  SwapChainImpl.cs  TextureImpl.cs  TextureViewImpl.cs
REngine.RHI.DiligentDriver(Deprecated)/: GPUObjectImpl.cs  GraphicsDriverImpl.cs  GraphicsDriverSettings.cs  GraphicsFactory.cs  MessageEvent.cs  NativeObjectUtils.cs  ObjectHolder.cs  REngine.RHI.DiligentDriver.csproj  ShaderResourceBindingImpl.cs  SwapChainImpl.cs  TextureImpl.cs  TextureViewImpl.cs
REngine.RHI.DiligentDriver.Test/: BaseTest.cs  GraphicsDriverTest.cs  REngine.RHI.DiligentDriver.Tests.csproj  UnitTest1.cs
REngine.RHI.DiligentDriver.Test(Deprecated)/: CommandBufferTest.cs  SwapChainTest.cs
REngine.RHI.NativeDriver/: BasePipelineStateImpl.cs  BufferApi.cs  BufferImpl.cs  BufferViewApi.cs  BufferViewImpl.cs  CommandBufferApi.cs  CommandBufferCache.cs  CommandBufferImpl.cs  (+32 more)
REngine.RHI.NativeDriver.Sandbox/: Program.cs  REngine.RHI.NativeDriver.Playground.csproj  REngine.RHI.NativeDriver.Sandbox.csproj
REngine.RHI.NativeDriver.Tests/: BaseTest.cs  CommandBufferTests.cs  DriverTests.cs  REngine.RHI.NativeDriver.Tests.csproj  SwapChainTests.cs
source/rengine/: CMakeLists.txt  api.h  base_private.h  defines.h  defines_private.h  eastl.h  eastl_allocator.cpp  eastl_allocator.h  eastl_private.h  exceptions.h  rengine.cpp  rengine.h  rengine_private.cpp  rengine_private.h  strings.h  types.h
source/rengine/core/: allocator.cpp  allocator.h  allocator_private.h  arena.cpp  arena.h  arena_private.cpp  arena_private.h  core.h  entity-utils.h  hash.cpp  hash.h  number_utils.h  pool.h  profiler.cpp  profiler.h  profiler_private.cpp  profiler_private.h  string-table.cpp  string-table.h  string_pool.cpp  string_pool.h  string_pool_private.cpp  string_pool_private.h  vector_utils_private.h  window.cpp  window.h  window_graphics_private.cpp  window_graphics_private.h  window_private.cpp  window_private.h
source/rengine/events/: engine_events.cpp  engine_events.h  event.h  events.h  window_events.cpp  window_events.h
source/rengine/graphics/: buffer_manager.cpp  buffer_manager.h  buffer_manager_private.cpp  buffer_manager_private.h  buffers.cpp  buffers.h  diligent_private.cpp  diligent_private.h  drawing.cpp  drawing.h  drawing_private.cpp  drawing_private.h  graphics.cpp  graphics.h  graphics_private.cpp  graphics_private.h  graphics_utils_private.cpp  graphics_utils_private.h  imgui_manager.cpp  imgui_manager.h  imgui_manager_private.cpp  imgui_manager_private.h  models.cpp  models.h  models_private.cpp  models_private.h  pipeline_state_manager.cpp  pipeline_state_manager.h  pipeline_state_manager_private.cpp  pipeline_state_manager_private.h  render_command.cpp  render_command.h  render_command_private.cpp  render_command_private.h  render_target_manager.cpp  render_target_manager.h  render_target_manager_private.cpp  render_target_manager_private.h  renderer.cpp  renderer.h  (+14 more)
source/rengine/io/: file.cpp  file.h  file_private.cpp  file_private.h  io.h  logger.cpp  logger.h  logger_iostream_impl_private.cpp  logger_iostream_impl_private.h  logger_private.cpp  logger_private.h  path.cpp  path.h
source/rengine/math/: math-operations.h  math-types.cpp  math-types.h  math.h  matrix2x2.h  matrix3x3.cpp  matrix3x3.h  matrix4x4.cpp  matrix4x4.h  quaternion.cpp  quaternion.h  sse.h  vec3.cpp  vec3.h
source/rengine/resources/: image.cpp  image.h  image_private.cpp  image_private.h  resources.h  resources_private.cpp  resources_private.h
source/tools/material_compiler/: CMakeLists.txt  main.cpp
(+586 files in other folders)
